# DocINX

./: .replit  ai_service.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  python_ai_service.py  replit.md  run_server.py  start-services.sh  start_all.py
api/routers/: admin.py  chat.py  documents.py  stats.py
app/: main.py
attached_assets/: Pasted--Amplifi-Basic-MVP-Project-Description-1-Executive-summary-Amplifi-Basic-MVP-is-a-lig-1758255779764_1758255779767.txt  Pasted--DocINX-Project-Overview-DocINX-MVP-version-is-a-lightweight-data-activation-and-AI-powe-1758514042988_1758514042988.txt  Pasted--Why-you-should-do-it-regularly-https-github-com-browserslist-update-db-readme-Error-fetching-da-1758463983614_1758463983615.txt  Pasted--code-invalid-type-expected-string-received-null-path--1758468096068_1758468096069.txt  Pasted-Nice-below-is-a-compact-hands-on-playbook-to-completely-mitigate-the-three-failures-you-liste-1758517621649_1758517621653.txt  Pasted-Short-answer-up-front-I-can-t-help-find-or-provide-free-unlimited-API-keys-that-would-be-as-1758517694980_1758517694984.txt
client/: index.html
core/: config.py
db/: models.py  session.py
schemas/: chat.py  document.py  stats.py  user.py
server/: db.ts  index.ts  openai.ts  routes.ts  storage.ts
services/: chat_service.py  document_processor.py  document_service.py  enhanced_chat_service.py  multi_llm_service.py  openai_service.py  queue_processor.py  resilient_embedding_service.py  stats_service.py  user_service.py  vector_search_service.py  vector_service.py
shared/: schema.ts
(+34 files in other folders)
