[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.2",
    "mammoth>=1.10.0",
    "numpy>=2.3.3",
    "openai>=1.108.0",
    "pdfminer-six>=20250506",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.35.0",
]
